--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -102,21 +102,26 @@
                     <button class="option-btns__btn option-btns__btn--pass">Pasuj</button>
                 </div>
                 <div class="play__circle-points">
-                    <p class="play__points"></p>
+                    <p class="play__points">0</p>
                 </div>
                 <div class="play__circle-points play__circle-points--user">
-                    <p class="play__points"></p>
+                    <p class="play__points">0</p>
                 </div>
                 <div class="play__stats stats">
                     <p class="stats__text">Statystyki z bieżącej gry:</p>
-                    <p class="stats__wins">Wygrane: <span>10</span></p>
-                    <p class="stats__draws">Remisy: <span>20</span></p>
-                    <p class="stats__loses">Przegrane: <span>15</span></p>
+                    <p class="stats__wins">Wygrane: <span>0</span></p>
+                    <p class="stats__draws">Remisy: <span>0</span></p>
+                    <p class="stats__loses">Przegrane: <span>0</span></p>
                 </div>
+                <!-- <img src="" alt="" class="play__active-card play__active-card--computer">
+                <img src="" alt="" class="play__active-card play__active-card--computer">
+                <img src="" alt="" class="play__active-card play__active-card--user">
+                <img src="" alt="" class="play__active-card play__active-card--user"> -->
             </div>
         </div>
         <script src="../js/nav.js"></script>
         <script src="../js/table-color.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
         <script src="script.js"></script>
 </body>
 
