--- a/war/index.html
+++ b/war/index.html
@@ -103,7 +103,7 @@
                 <img src="" alt="" class="play__active-card play__active-card--user">
                 <form action="" class="play__form form">
                     <label for="rate" class="form__text">Stawka: </label>
-                    <input type="number" class="form__rate" id="rate"></form>
+                    <input type="number" class="form__rate" id="rate" value="5"></form>
                 <button class="play__play-btn">Graj</button>
                 <button class="play__put-out">Wystaw</button>
                 <div class="play__stats stats">
