--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -31,8 +31,9 @@
                 <ul class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="index.html">Blackjack</a></ul>
                 <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="../war/index.html">War</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
+                    <a class="navigation-box-left__link" href="../war/index.html">Wojna</a></ul>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../baccarat/index.html">Baccarat</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
             </ul>
