--- a/contact/index.html
+++ b/contact/index.html
@@ -25,7 +25,8 @@
                     <a class="navigation-box-left__link" href="../blackjack/index.html">Blackjack</a></ul>
                 <ul class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="../war/index.html">Wojna</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
+                <ul class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../baccarat/index.html">Baccarat</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
                 <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
             </ul>
