--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                     <a class="navigation-box-left__link" href="contact/index.html">Kontakt</a></li>
                 <li class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="blackjack/index.html">Blackjack</a></li>
-                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="war/index.html">War</a>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="war/index.html">Wojna</a>
                 </li>
-                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="baccarat/index.html">Baccarat</a></li>
                 <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
                 <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
             </ul>
@@ -99,7 +101,7 @@
                     </div>
                     <div class="games-box__game game">
                         <div class="game__background game__background--third"></div>
-                        <h4 class="game__name">Game</h4>
+                        <h4 class="game__name">Baccarat</h4>
                     </div>
                     <div class="games-box__game game">
                         <div class="game__background game__background--fourth"></div>
