feature: serve static files

--- a/public/index.html
+++ b/public/index.html
@@ -52,20 +52,20 @@
                 <h3 class="sign-container__text sign-container__text--sign-up">Rejestracja</h3>
             </div>
             <h3 class="navigation-box-right__text">Zaloguj się do swojego konta</h3>
-            <form action="" method='post' class="navigation-box-right__sign-in-form sign-in-form">
-                <input type="text" placeholder="Login" class="sign-in-form__input sign-in-form__input--login">
-                <input type="password" placeholder="Hasło" class="sign-in-form__input sign-in-form__input--password">
+            <form onsubmit="login(event)" class="navigation-box-right__sign-in-form sign-in-form">
+                <input type="text" id="login" placeholder="Login" class="sign-in-form__input sign-in-form__input--login">
+                <input type="password" id="password" placeholder="Hasło" class="sign-in-form__input sign-in-form__input--password">
                 <i class="fas fa-user sign-in-form__icon sign-in-form__icon--login"></i>
                 <i class="fas fa-lock sign-in-form__icon sign-in-form__icon--password"></i>
                 <button type="submit" class="sign-in-form__button">Zaloguj</button>
             </form>
-            <form action="" method='post' class="navigation-box-right__sign-up-form sign-up-form">
-                <input type="text" placeholder="Imię" class="sign-up-form__input sign-up-form__input--name">
-                <input type="text" placeholder="Nazwisko" class="sign-up-form__input sign-up-form__input--surname">
-                <input type="text" placeholder="Rok urodzenia" class="sign-up-form__input sign-up-form__input--year">
-                <input type="text" placeholder="E-mail" class="sign-up-form__input sign-up-form__input--email">
-                <input type="text" placeholder="Login" class="sign-up-form__input sign-up-form__input--login">
-                <input type="password" placeholder="Hasło" class="sign-up-form__input sign-up-form__input--password">
+            <form onsubmit="register(event)" class="navigation-box-right__sign-up-form sign-up-form">
+                <input type="text" id="name" placeholder="Imię" class="sign-up-form__input sign-up-form__input--name">
+                <input type="text" id="surname" placeholder="Nazwisko" class="sign-up-form__input sign-up-form__input--surname">
+                <input type="text" id="dateOfBirth" placeholder="Rok urodzenia" class="sign-up-form__input sign-up-form__input--year">
+                <input type="text" id="email" placeholder="E-mail" class="sign-up-form__input sign-up-form__input--email">
+                <input type="text" id="login" placeholder="Login" class="sign-up-form__input sign-up-form__input--login">
+                <input type="password" id="password" placeholder="Hasło" class="sign-up-form__input sign-up-form__input--password">
                 <i class="fas fa-signature sign-up-form__icon sign-up-form__icon--name"></i>
                 <i class="fas fa-signature sign-up-form__icon sign-up-form__icon--surname"></i>
                 <i class="fas fa-birthday-cake sign-up-form__icon sign-up-form__icon--year"></i>
