features: cookie JWT auth, authRequired middleware

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
             </div>
             <h3 class="navigation-box-right__text">Zaloguj się do swojego konta</h3>
             <form onsubmit="login(event)" class="navigation-box-right__sign-in-form sign-in-form">
-                <input type="text" id="login" placeholder="Login" class="sign-in-form__input sign-in-form__input--login">
-                <input type="password" id="password" placeholder="Hasło" class="sign-in-form__input sign-in-form__input--password">
+                <input type="text" id="login_login" placeholder="Login" class="sign-in-form__input sign-in-form__input--login">
+                <input type="password" id="login_password" placeholder="Hasło" class="sign-in-form__input sign-in-form__input--password">
                 <i class="fas fa-user sign-in-form__icon sign-in-form__icon--login"></i>
                 <i class="fas fa-lock sign-in-form__icon sign-in-form__icon--password"></i>
                 <button type="submit" class="sign-in-form__button">Zaloguj</button>
@@ -64,8 +64,8 @@
                 <input type="text" id="surname" placeholder="Nazwisko" class="sign-up-form__input sign-up-form__input--surname">
                 <input type="text" id="dateOfBirth" placeholder="Rok urodzenia" class="sign-up-form__input sign-up-form__input--year">
                 <input type="text" id="email" placeholder="E-mail" class="sign-up-form__input sign-up-form__input--email">
-                <input type="text" id="login" placeholder="Login" class="sign-up-form__input sign-up-form__input--login">
-                <input type="password" id="password" placeholder="Hasło" class="sign-up-form__input sign-up-form__input--password">
+                <input type="text" id="register_login" placeholder="Login" class="sign-up-form__input sign-up-form__input--login">
+                <input type="password" id="register_password" placeholder="Hasło" class="sign-up-form__input sign-up-form__input--password">
                 <i class="fas fa-signature sign-up-form__icon sign-up-form__icon--name"></i>
                 <i class="fas fa-signature sign-up-form__icon sign-up-form__icon--surname"></i>
                 <i class="fas fa-birthday-cake sign-up-form__icon sign-up-form__icon--year"></i>
