feature: user statistics

--- a/public/index.html
+++ b/public/index.html
@@ -87,11 +87,11 @@
             <div class="navigation-box-right__user-stats user-stats">
                 <h3 class="user-stats__title">Witaj, poniżej znajdziesz kilka statystyk z Twoich dotychczasowych gier
                 </h3>
-                <p class="user-stats__data user-stats__data--games">Ilość gier: <span>0</span></p>
-                <p class="user-stats__data user-stats__data--wins">Wygrane: <span>0</span></p>
-                <p class="user-stats__data user-stats__data--draws">Remisy: <span>0</span></p>
-                <p class="user-stats__data user-stats__data--losses">Przegrane: <span>0</span></p>
-                <p class="user-stats__data user-stats__data--balance">Twoje saldo: <span>0</span></p>
+                <p class="user-stats__data user-stats__data--games">Ilość gier: <span id="nOfGames">0</span></p>
+                <p class="user-stats__data user-stats__data--wins">Wygrane: <span id="nOfWonGames">0</span></p>
+                <p class="user-stats__data user-stats__data--draws">Remisy: <span id="nOfDraws">0</span></p>
+                <p class="user-stats__data user-stats__data--losses">Przegrane: <span id="nOfLosses">0</span></p>
+                <p class="user-stats__data user-stats__data--balance">Twoje saldo: <span id="balance">0</span></p>
                 <button type="submit" class="user-stats__button">Wyloguj się</button>
             </div>
         </div>
