feature: log in persistent view

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
             <div class="main__navbar navbar">
                 <i class="fas fa-bars navbar__icon"></i>
                 <h3 class="navbar__title">Mini kasyno</h3>
-                <i class="far fa-user navbar__icon navbar__icon--login"></i>
+                <i id="user-icon" class="far fa-user navbar__icon navbar__icon--login"></i>
             </div>
             <div class="main__header header">
                 <div class="header__text-container">
